test/invalid/baseline/dict-field-unterminated.txt
Syntax error at line 1 in dict-field-unterminated.widl, since `dictionary Nene`:
 { DOMString cpp = "high" };
                          ^ Unterminated dictionary member, expected `;`
